k8s/myninja-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: myninja-server-svc
  labels:
    app: myninja-server
spec:
  type: ClusterIP
  selector:
    app: myninja-server
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myninja-server-deployment
  labels:
    app: myninja-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: myninja-server
  template:
    metadata:
      labels:
        app: myninja-server
    spec:
      containers:
      - name: myninja-server
        image: ckasidis/myninja-server:latest
        ports:
        - containerPort: 8080
