k8s/myninja-user-dashboard.yaml
apiVersion: v1
kind: Service
metadata:
  name: myninja-user-dashboard-svc
  labels:
    app: myninja-user-dashboard
spec:
  type: ClusterIP
  selector:
    app: myninja-user-dashboard
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myninja-user-dashboard-deployment
  labels:
    app: myninja-user-dashboard
spec:
  replicas: 2
  selector:
    matchLabels:
      app: myninja-user-dashboard
  template:
    metadata:
      labels:
        app: myninja-user-dashboard
    spec:
      containers:
      - name: myninja-user-dashboard
        image: ckasidis/myninja-user-dashboard:latest
        ports:
        - containerPort: 3000
