k8s/ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resource
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-production"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - myninja.ckasidis.com
    secretName: myninja-ckasidis-com-tls
  rules:
  - host: "myninja.ckasidis.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: myninja-server-svc
            port:
              number: 80
      - pathType: Prefix
        path: "/dashboard"
        backend:
          service:
            name: myninja-user-dashboard-svc
            port:
              number: 80
